More classes for God of classes

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Demo page for Keep The Line</title>
-
+    <style>
+        #display {
+            width: 100%;
+            min-height: 100vh;
+        }
+        .absolute {
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
+    <div id="display"></div>
     <script src="../dist/bundle.js"></script>
 </body>
 </html>
