Add layers for display and cells. Automate drawing cell on display.

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>Demo page for Keep The Line</title>
     <style>
-        #display {
+        #display2 {
             width: 100%;
             min-height: 100vh;
+        }
+        #display {
+            width: 600px;
+            height: 300px;
         }
         .absolute {
             position: absolute;
